(library
 (name ppx_rocq_runtime)
 (public_name ppx_rocq.runtime)
 (synopsis "Runtime for ppx_rocq")
 (libraries
   rocq-runtime.plugins.ltac
   rocq-runtime.plugins.ltac2)
  (preprocess (pps ppx_optcomp -- -cookie "ppx_optcomp.env=env ~rocq:(Defined (%{coq:version.major}, %{coq:version.minor}))")))
